# frankenstein

./: .clang-format  CMakeLists.txt  CPPLINT.cfg  README.md  conanfile.py
cmake/: proto_utils.cmake
frankenstein/: CMakeLists.txt
frankenstein/include/frankenstein/: client.hpp  commons.hpp  server.hpp
frankenstein/src/: client.cpp  main_client.cpp  main_server.cpp  server.cpp
proto/: exchange_service.proto
